C-P/Bloco2/bloco2/b2_04/SuffixCalculator04.g4
grammar SuffixCalculator04;

program:
    stat *EOF;

stat:
    expr ? NEWLINE;


expr:
    op=('*' | '/' | '+' | '-') expr expr            #ExprSuffix
    | NUMBER                                        #ExprNumber
    ;

NUMBER: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n';
WS: [ \t]+ -> skip;
